# feedservice-plugin-fb-common

./: Makefile.am  configure.ac  facebookcommon.pc.in
debian/: changelog  control  copyright  feedservice-plugin-fb-common-dev.dirs  feedservice-plugin-fb-common-dev.install  feedservice-plugin-fb-common.install  rules
include/facebook/: common.h
src/: Makefile.am  facebookcommon.c
src/common/: Makefile.am  facebookcommon.c
src/oauth/: Makefile.am  oauth.cpp  qfacebooklogin.cpp  qfacebooklogin.h
